--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
   ],
   "dependencies": {
     "coffee-script": "1.10.0",
+    "rtc": "^3.4.0",
+    "rtc-plugin-node": "^2.3.0",
     "websocket": "1.0.22"
   },
   "optionalDependencies": {
