--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "MIT",
   "dependencies": {
     "coffee-script": "~1.10.0",
+    "uuid": "^2.0.2",
     "websocket": "~1.0.22"
   },
   "optionalDependencies": {
